--- a/TrainingPortal/TrainingPortal/TrainingPortal.csproj
+++ b/TrainingPortal/TrainingPortal/TrainingPortal.csproj
@@ -149,6 +149,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
