--- a/TrainingPortal/TrainingPortal/packages.config
+++ b/TrainingPortal/TrainingPortal/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
@@ -15,4 +16,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
 </packages>
