--- a/TrainingPortal/TrainingPortal/packages.config
+++ b/TrainingPortal/TrainingPortal/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
@@ -16,5 +17,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="structuremap" version="3.1.1.134" targetFramework="net461" />
+  <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net461" />
+  <package id="structuremap.web" version="3.1.0.133" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net461" />
 </packages>
