--- a/TrainingPortal/TrainingPortal/TrainingPortal.csproj
+++ b/TrainingPortal/TrainingPortal/TrainingPortal.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -146,7 +147,6 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\StructuremapMvc.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\Account2Controller.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
@@ -160,7 +160,16 @@
     <Compile Include="Models\ApiService.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\IApiService.cs" />
-    <Compile Include="Models\UserStore.cs" />
+    <Compile Include="Models\Repositories\UserRepository.cs" />
+    <Compile Include="Models\Repositories\RoleRepository.cs" />
+    <Compile Include="Models\Repositories\UserRoleRepository.cs" />
+    <Compile Include="Models\Repositories\Repository.cs" />
+    <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\Stores\RoleStore.cs" />
+    <Compile Include="Models\Stores\UserRoleStore.cs" />
+    <Compile Include="Models\Stores\UserPasswordStore.cs" />
+    <Compile Include="Models\Stores\UserEmailStore.cs" />
+    <Compile Include="Models\Stores\UserStore.cs" />
     <Compile Include="Models\UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
