[TP-8] Wcf service and Category functionality.

--- a/TrainingPortal/TrainingPortal/Web.config
+++ b/TrainingPortal/TrainingPortal/Web.config
@@ -10,8 +10,24 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IUserService" />
+        <binding name="BasicHttpBinding_ICategoryService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:51750/CategoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICategoryService"
+        contract="CategoryService.ICategoryService" name="BasicHttpBinding_ICategoryService" />
+      <endpoint address="http://localhost:51750/UserService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IUserService" contract="UserService.IUserService"
+        name="BasicHttpBinding_IUserService" />
+    </client>
+  </system.serviceModel>
   <connectionStrings>
-    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal;MultipleActiveResultSets=true" />
+    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal;Integrated Security=true" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
