--- a/TrainingPortal/TrainingPortal/TrainingPortal.csproj
+++ b/TrainingPortal/TrainingPortal/TrainingPortal.csproj
@@ -148,13 +148,16 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\StructuremapMvc.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
@@ -167,10 +170,10 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ManageViewModel.cs" />
     <Compile Include="Models\Repositories\CourseRepository.cs" />
-    <Compile Include="Models\Repositories\UserRepository.cs" />
     <Compile Include="Models\Repositories\RoleRepository.cs" />
     <Compile Include="Models\Repositories\UserRoleRepository.cs" />
     <Compile Include="Models\Repositories\Repository.cs" />
@@ -209,6 +212,11 @@
     <Content Include="Views\User\ChangePassword.cshtml" />
     <Content Include="Views\User\ChangeProfile.cshtml" />
     <Content Include="Views\User\ChangeRole.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Category\Details.cshtml" />
+    <Content Include="Views\Category\Create.cshtml" />
+    <Content Include="Views\Category\Edit.cshtml" />
+    <Content Include="Views\Category\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -218,6 +226,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TrainingPortal.Business\TrainingPortal.Business.csproj">
+      <Project>{9ac9a607-d9a6-4e91-ba6f-6eb53fac601f}</Project>
+      <Name>TrainingPortal.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TrainingPortal.Client\TrainingPortal.Data.csproj">
+      <Project>{a6b5c4ee-e435-4573-8c14-50f4088cc871}</Project>
+      <Name>TrainingPortal.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
