--- a/TrainingPortal/TrainingPortal.Client/app.config
+++ b/TrainingPortal/TrainingPortal.Client/app.config
@@ -5,6 +5,9 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IUserService" />
         <binding name="BasicHttpBinding_ICategoryService" />
+        <binding name="BasicHttpBinding_ICourseService" />
+        <binding name="BasicHttpBinding_IRoleService" />
+        <binding name="BasicHttpBinding_IUserRoleService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -14,6 +17,15 @@
       <endpoint address="http://localhost:51750/UserService.svc" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IUserService" contract="UserService.IUserService"
         name="BasicHttpBinding_IUserService" />
+      <endpoint address="http://localhost:51750/CourseService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICourseService"
+        contract="CourseService.ICourseService" name="BasicHttpBinding_ICourseService" />
+      <endpoint address="http://localhost:51750/RoleService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IRoleService" contract="RoleService.IRoleService"
+        name="BasicHttpBinding_IRoleService" />
+      <endpoint address="http://localhost:51750/UserRoleService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserRoleService"
+        contract="UserRoleService.IUserRoleService" name="BasicHttpBinding_IUserRoleService" />
     </client>
   </system.serviceModel>
 </configuration>
