--- a/TrainingPortal/TrainingPortal.Service/TrainingPortal.Service.csproj
+++ b/TrainingPortal/TrainingPortal.Service/TrainingPortal.Service.csproj
@@ -62,6 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CategoryService.svc" />
+    <Content Include="CourseService.svc" />
+    <Content Include="RoleService.svc" />
+    <Content Include="UserRoleService.svc" />
     <Content Include="UserService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -71,11 +74,25 @@
     <Compile Include="CategoryService.svc.cs">
       <DependentUpon>CategoryService.svc</DependentUpon>
     </Compile>
+    <Compile Include="CourseService.svc.cs">
+      <DependentUpon>CourseService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="Dto\CourseDto.cs" />
     <Compile Include="Dto\CategoryDto.cs" />
+    <Compile Include="Dto\RoleDto.cs" />
     <Compile Include="Dto\UserDto.cs" />
+    <Compile Include="Interfaces\ICourseService.cs" />
     <Compile Include="Interfaces\ICategoryService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
+    <Compile Include="Interfaces\IRoleService.cs" />
+    <Compile Include="Interfaces\IUserRoleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleService.svc.cs">
+      <DependentUpon>RoleService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="UserRoleService.svc.cs">
+      <DependentUpon>UserRoleService.svc</DependentUpon>
+    </Compile>
     <Compile Include="UserService.svc.cs">
       <DependentUpon>UserService.svc</DependentUpon>
     </Compile>
