--- a/TrainingPortal/TrainingPortal.Service/Web.config
+++ b/TrainingPortal/TrainingPortal.Service/Web.config
@@ -24,6 +24,10 @@
         <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ICategoryService"/>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
+      <service name="TrainingPortal.Service.CourseService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ICourseService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
