--- a/TrainingPortal/TrainingPortal/Web.config
+++ b/TrainingPortal/TrainingPortal/Web.config
@@ -18,6 +18,7 @@
         <binding name="BasicHttpBinding_ICourseService" />
         <binding name="BasicHttpBinding_IRoleService" />
         <binding name="BasicHttpBinding_IUserRoleService" />
+        <binding name="BasicHttpBinding_ILessonService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -36,6 +37,9 @@
       <endpoint address="http://localhost:51750/UserRoleService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserRoleService"
         contract="UserRoleService.IUserRoleService" name="BasicHttpBinding_IUserRoleService" />
+      <endpoint address="http://localhost:51750/LessonService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILessonService"
+        contract="LessonService.ILessonService" name="BasicHttpBinding_ILessonService" />
     </client>
   </system.serviceModel>
   <connectionStrings>
