--- a/TrainingPortal/TrainingPortal.Client/app.config
+++ b/TrainingPortal/TrainingPortal.Client/app.config
@@ -8,6 +8,7 @@
         <binding name="BasicHttpBinding_ICourseService" />
         <binding name="BasicHttpBinding_IRoleService" />
         <binding name="BasicHttpBinding_IUserRoleService" />
+        <binding name="BasicHttpBinding_ILessonService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -26,6 +27,9 @@
       <endpoint address="http://localhost:51750/UserRoleService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserRoleService"
         contract="UserRoleService.IUserRoleService" name="BasicHttpBinding_IUserRoleService" />
+      <endpoint address="http://localhost:51750/LessonService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILessonService"
+        contract="LessonService.ILessonService" name="BasicHttpBinding_ILessonService" />
     </client>
   </system.serviceModel>
 </configuration>
