--- a/TrainingPortal/TrainingPortal.Client/TrainingPortal.Data.csproj
+++ b/TrainingPortal/TrainingPortal.Client/TrainingPortal.Data.csproj
@@ -62,6 +62,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Connected Services\TestOptionService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\TestService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\UserRoleService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -73,6 +83,8 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\TestRepository.cs" />
+    <Compile Include="Repositories\TestOptionRepository.cs" />
     <Compile Include="Repositories\LessonRepository.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
@@ -139,6 +151,32 @@
     <None Include="Connected Services\RoleService\TrainingPortal.Client.RoleService.RoleDto.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\TestOptionService\TestOptionService.wsdl" />
+    <None Include="Connected Services\TestOptionService\TestOptionService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TestOptionService\TestOptionService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TestOptionService\TestOptionService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TestOptionService\TrainingPortal.Client.TestOptionService.TestOptionDto.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\TestService\TestService.wsdl" />
+    <None Include="Connected Services\TestService\TestService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TestService\TestService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TestService\TestService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TestService\TrainingPortal.Client.TestService.TestDto.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\UserRoleService\UserRoleService.wsdl" />
     <None Include="Connected Services\UserRoleService\UserRoleService.xsd">
       <SubType>Designer</SubType>
@@ -168,6 +206,8 @@
     <WCFMetadataStorage Include="Connected Services\CourseService\" />
     <WCFMetadataStorage Include="Connected Services\LessonService\" />
     <WCFMetadataStorage Include="Connected Services\RoleService\" />
+    <WCFMetadataStorage Include="Connected Services\TestOptionService\" />
+    <WCFMetadataStorage Include="Connected Services\TestService\" />
     <WCFMetadataStorage Include="Connected Services\UserRoleService\" />
     <WCFMetadataStorage Include="Connected Services\UserService\" />
   </ItemGroup>
@@ -257,6 +297,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\LessonService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestService\TestService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestOptionService\TestOptionService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestOptionService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestOptionService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\TestOptionService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
