--- a/TrainingPortal/TrainingPortal.Client/app.config
+++ b/TrainingPortal/TrainingPortal.Client/app.config
@@ -9,6 +9,8 @@
         <binding name="BasicHttpBinding_IRoleService" />
         <binding name="BasicHttpBinding_IUserRoleService" />
         <binding name="BasicHttpBinding_ILessonService" />
+        <binding name="BasicHttpBinding_ITestService" />
+        <binding name="BasicHttpBinding_ITestOptionService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -30,6 +32,12 @@
       <endpoint address="http://localhost:51750/LessonService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILessonService"
         contract="LessonService.ILessonService" name="BasicHttpBinding_ILessonService" />
+      <endpoint address="http://localhost:51750/TestService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_ITestService" contract="TestService.ITestService"
+        name="BasicHttpBinding_ITestService" />
+      <endpoint address="http://localhost:51750/TestOptionService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITestOptionService"
+        contract="TestOptionService.ITestOptionService" name="BasicHttpBinding_ITestOptionService" />
     </client>
   </system.serviceModel>
 </configuration>
