--- a/TrainingPortal/TrainingPortal/TrainingPortal.csproj
+++ b/TrainingPortal/TrainingPortal/TrainingPortal.csproj
@@ -160,6 +160,8 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\LessonController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\TestOptionController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
@@ -169,12 +171,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\TestOption.cs" />
+    <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Test.cs" />
     <Compile Include="Models\Lesson.cs" />
-    <Compile Include="Models\ManageViewModel.cs" />
+    <Compile Include="Models\ViewModels\ManageViewModel.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\Stores\RoleStore.cs" />
     <Compile Include="Models\Stores\UserRoleStore.cs" />
@@ -220,6 +224,16 @@
     <Content Include="Views\Lesson\Create.cshtml" />
     <Content Include="Views\Lesson\Edit.cshtml" />
     <Content Include="Views\Lesson\Delete.cshtml" />
+    <Content Include="Views\Test\Create.cshtml" />
+    <Content Include="Views\TestOption\Index.cshtml" />
+    <Content Include="Views\TestOption\Details.cshtml" />
+    <Content Include="Views\TestOption\Create.cshtml" />
+    <Content Include="Views\TestOption\Edit.cshtml" />
+    <Content Include="Views\TestOption\Delete.cshtml" />
+    <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Test\Details.cshtml" />
+    <Content Include="Views\Test\Edit.cshtml" />
+    <Content Include="Views\Test\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
