[TP-12] Connection string changes in Web.config.

--- a/TrainingPortal/TrainingPortal.Service/Web.config
+++ b/TrainingPortal/TrainingPortal.Service/Web.config
@@ -46,7 +46,7 @@
   </system.serviceModel>
 
   <connectionStrings>
-    <add name="Local" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=TrainingPortal;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal;User Id=admin;Password=1234567q" />
   </connectionStrings>
   
   <system.webServer>
