--- a/TrainingPortal/TrainingPortal/Web.config
+++ b/TrainingPortal/TrainingPortal/Web.config
@@ -51,7 +51,7 @@
     </client>
   </system.serviceModel>
   <connectionStrings>
-    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal;Integrated Security=true" />
+    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal;User Id=admin;Password=1234567q" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
