[TP-15] Readme and database deployment script and refactoring.

--- a/TrainingPortal/TrainingPortal.Service/Web.config
+++ b/TrainingPortal/TrainingPortal.Service/Web.config
@@ -10,25 +10,6 @@
   </system.web>
   
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IUserService"/>
-      </basicHttpBinding>
-    </bindings>
-    <services>
-      <service name="TrainingPortal.Service.UserService">
-        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.IUserService"/>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-      </service>
-      <service name="TrainingPortal.Service.CategoryService">
-        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ICategoryService"/>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-      </service>
-      <service name="TrainingPortal.Service.CourseService">
-        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ICourseService"/>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-      </service>
-    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -46,7 +27,7 @@
   </system.serviceModel>
 
   <connectionStrings>
-    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal;User Id=admin;Password=1234567q" />
+    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal1" />
   </connectionStrings>
   
   <system.webServer>
