--- a/TrainingPortal/TrainingPortal.Web.Data/app.config
+++ b/TrainingPortal/TrainingPortal.Web.Data/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.serviceModel>
-    <bindings>
+    <!--<bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IUserService" />
         <binding name="BasicHttpBinding_ICategoryService" />
@@ -46,6 +46,6 @@
       <endpoint address="http://localhost:51750/AudienceService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAudienceService"
         contract="AudienceService.IAudienceService" name="BasicHttpBinding_IAudienceService" />
-    </client>
+    </client>-->
   </system.serviceModel>
 </configuration>
