[TP-16] Dependency injection.

--- a/TrainingPortal/TrainingPortal.Web.Data/app.config
+++ b/TrainingPortal/TrainingPortal.Web.Data/app.config
@@ -47,5 +47,15 @@
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAudienceService"
         contract="AudienceService.IAudienceService" name="BasicHttpBinding_IAudienceService" />
     </client>-->
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IRoleService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:51750/RoleService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IRoleService" contract="RoleService.IRoleService"
+        name="BasicHttpBinding_IRoleService" />
+    </client>
   </system.serviceModel>
 </configuration>
