--- a/TrainingPortal/TrainingPortal.Web.Data/TrainingPortal.Web.Data.csproj
+++ b/TrainingPortal/TrainingPortal.Web.Data/TrainingPortal.Web.Data.csproj
@@ -99,8 +99,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\Role.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AudienceRepository.cs" />
     <Compile Include="Repositories\CertificateRepository.cs" />
@@ -112,11 +110,6 @@
     <Compile Include="Repositories\CourseRepository.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\UserRoleRepository.cs" />
-    <Compile Include="Stores\RoleStore.cs" />
-    <Compile Include="Stores\UserEmailStore.cs" />
-    <Compile Include="Stores\UserPasswordStore.cs" />
-    <Compile Include="Stores\UserRoleStore.cs" />
-    <Compile Include="Stores\UserStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -414,6 +407,9 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
