[TP-17] Print certificate possibility.

--- a/TrainingPortal/TrainingPortal.Web.Data/app.config
+++ b/TrainingPortal/TrainingPortal.Web.Data/app.config
@@ -50,12 +50,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IRoleService" />
+        <binding name="BasicHttpBinding_ICertificateService" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:51750/RoleService.svc" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IRoleService" contract="RoleService.IRoleService"
         name="BasicHttpBinding_IRoleService" />
+      <endpoint address="http://localhost:51750/CertificateService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICertificateService"
+        contract="CertificateService.ICertificateService" name="BasicHttpBinding_ICertificateService" />
     </client>
   </system.serviceModel>
 </configuration>
