--- a/TrainingPortal/TrainingPortal.Web.Data/app.config
+++ b/TrainingPortal/TrainingPortal.Web.Data/app.config
@@ -47,5 +47,15 @@
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAudienceService"
         contract="AudienceService.IAudienceService" name="BasicHttpBinding_IAudienceService" />
     </client>-->
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ICertificateService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:51750/CertificateService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICertificateService"
+        contract="CertificateService.ICertificateService" name="BasicHttpBinding_ICertificateService" />
+    </client>
   </system.serviceModel>
 </configuration>
